tests/kulezi_tests/good/function_params.lat
int main() { return f(1, 2, 3, 4, 5, 6, 7, 8); }

int f(int a, int b, int c, int d, int e, int f, int g, int h) {
    return a + b + c + d + e + f + g + h;
}
