tests/kulezi_tests/bad/call_class.lat
class c {
    
}

int main() {
    c d = c;
    return d();
}